Closed
Bug 596737
Opened 15 years ago
Closed 15 years ago
[OS/2] [JAEGER] linking problems of MethodJIT
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: wuno, Assigned: wuno)
Details
Attachments
(2 files)
|
1.05 KB,
patch
|
dave.r.yeo
:
review+
dvander
:
review+
|
Details | Diff | Splinter Review |
|
1.16 KB,
patch
|
dvander
:
approval2.0+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (OS/2; Warp 4.5; rv:2.0b6pre) Gecko/20100914 Firefox/4.0b6pre
Build Identifier:
we need to add some if defined(XP_OS2) to be able to link against the MethodJIT object. Practically we need the prepending underscore and like MinGW the symbols created by the asm have to be properly decorated to be recognized as fastcall symbols (see bug595199).
Reproducible: Always
| Assignee | ||
Updated•15 years ago
|
Version: unspecified → Trunk
| Assignee | ||
Comment 1•15 years ago
|
||
Attachment #475632 -
Flags: review?(daveryeo)
Attachment #475632 -
Flags: review?(daveryeo) → review+
| Assignee | ||
Comment 2•15 years ago
|
||
Comment on attachment 475632 [details] [diff] [review]
do it like windows
going for additional r from someone of the js crew.
Attachment #475632 -
Flags: review?(dvander)
Updated•15 years ago
|
Attachment #475632 -
Flags: review?(dvander) → review+
| Assignee | ||
Updated•15 years ago
|
Keywords: checkin-needed
Whiteboard: TM
| Assignee | ||
Comment 3•15 years ago
|
||
added a comment for check-in to the patch
Assignee: general → wuno
Status: NEW → ASSIGNED
| Assignee | ||
Updated•15 years ago
|
Whiteboard: TM → TraceMonkey
Comment 4•15 years ago
|
||
Why does this have checkin-needed? Please remove that keyword until you have approval.
| Assignee | ||
Comment 5•15 years ago
|
||
Comment on attachment 477714 [details] [diff] [review]
patch for checkin
beautified version of the patch r+ed by OS/2 and JS guys. Very low risk adding ifdef XP_OS2 to unbreak the build
Attachment #477714 -
Flags: approval2.0?
| Assignee | ||
Updated•15 years ago
|
Keywords: checkin-needed
Whiteboard: TraceMonkey
Comment 6•15 years ago
|
||
Thank you.
| Assignee | ||
Comment 7•15 years ago
|
||
(In reply to comment #6)
> Thank you.
Yeah, sorry, I wasn't aware that js checkins have to be approved, too.
Updated•15 years ago
|
Attachment #477714 -
Flags: approval2.0? → approval2.0+
| Assignee | ||
Updated•15 years ago
|
Keywords: checkin-needed
Comment 8•15 years ago
|
||
| Assignee | ||
Comment 9•15 years ago
|
||
(In reply to comment #8)
> Pushed http://hg.mozilla.org/mozilla-central/rev/43dd46547be6
Thanks for the push. Sorry if the question is stupid this checkin won't get lost next time when tracemonkey is merged?
Comment 10•15 years ago
|
||
I'd be shocked if it was! :)
We try to push js/src changes to tracemonkey because, yes, it can create merge headaches.
Comment 12•15 years ago
|
||
To be clear, I should have pushed to tracemonkey, not m-c?
Comment 13•15 years ago
|
||
(In reply to comment #11)
> We try to push js/src changes to tracemonkey because, yes, it can create merge
> headaches.
To expand on this: we *always* push js/src changes to the tracemonkey repository, and then mark the bug whiteboard field as "fixed-in-tracemonkey". Then rsayre periodically does merges from tracemonkey to mozilla-central and vice versa. So your push won't get lost but in the future please push to the tracemonkey repo.
Comment 14•15 years ago
|
||
Ok, noted, apologies for any merge problems I've caused. :(
For future, it's worth noting when checkin-needed is used the assumption is that the landing is for m-c unless the Whiteboard/Version/Target Milestone fields say otherwise. Although I now know better for js/src, it may be worth your while to make sure the whiteboard is set in future in case there are others looking for patches to push that don't yet know of this exception.
| Assignee | ||
Comment 15•15 years ago
|
||
(In reply to comment #14)
Sorry, I had written to the whiteboard TraceMonkey when I set the checkin-needed flag before asking for approval.
When asking for approval I cleared the whiteboard and after getting approval I have forgotten to mention tracemonkey again in the whiteboard.
You need to log in
before you can comment on or make changes to this bug.
Description
•