Bug 596737 - [JAEGER] fix linking of MethodJIT on OS/2 p=wuno,r=daveryeo,dvander,a=dvander